5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1636_651.log
== TEST (2019-04-10 14:07:00) 
-- CODE:
h = float(input("altura: "))
sex = input("sexo:(M/F) ")

if sex =={M or F}:
	if sex == F:
		p_ideal = (62.1 * h) - 44.7
		print(p_ideal)
	else:
		p_ideal = (72.7 * h) - 58
		print(p_ideal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if sex =={M or F}:
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:07:33) 
-- CODE:
h = float(input("altura: "))
sex = input("sexo:(M/F) ")

if sex =={"M" or "F"}:
	if sex == F:
		p_ideal = (62.1 * h) - 44.7
		print(p_ideal)
	else:
		p_ideal = (72.7 * h) - 58
		print(p_ideal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if sex =={M or F}:
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:08:06) 
-- CODE:
h = float(input("altura: "))
sex = input("sexo:(M/F) ")

if sex =={"M" or "F"}:
	if sex == "F":
		p_ideal = (62.1 * h) - 44.7
		print(p_ideal)
	else:
		p_ideal = (72.7 * h) - 58
		print(p_ideal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if sex =={M or F}:
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:08:41) 
-- CODE:
h = float(input("altura: "))
sex = input("sexo:(M/F) ")

if sex =="M" or "F":
	if sex == "F":
		p_ideal = (62.1 * h) - 44.7
		print(p_ideal)
	else:
		p_ideal = (72.7 * h) - 58
		print(p_ideal)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:09:29) 
-- CODE:
h = float(input("altura: "))
sex = input("sexo:(M/F) ")

if sex =="M" or "F":
	if sex == "F":
		p_ideal = (62.1 * h) - 44.7
		print(round(p_ideal, 2))
	else:
		p_ideal = (72.7 * h) - 58
		print(round(p_ideal, 2))
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:09:44) 
-- CODE:
h = float(input("altura: "))
sex = input("sexo:(M/F) ")

if sex =="M" or "F":
	if sex == "F":
		p_ideal = (62.1 * h) - 44.7
		print(round(p_ideal, 2))
	else:
		p_ideal = (72.7 * h) - 58
		print(round(p_ideal, 2))
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:09:54) 
-- CODE:
h = float(input("altura: "))
sex = input("sexo:(M/F) ")

if sex =="M" or "F":
	if sex == "F":
		p_ideal = (62.1 * h) - 44.7
		print(round(p_ideal, 2))
	else:
		p_ideal = (72.7 * h) - 58
		print(round(p_ideal, 2))
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:10:16) 
-- CODE:
h = float(input("altura: "))
sex = input("sexo:(M/F) ")

if sex =="M" or "F":
	if sex == "F":
		p_ideal = (62.1 * h) - 44.7
		print(round(p_ideal, 2))
	else:
		p_ideal = (72.7 * h) - 58
		print(round(p_ideal, 2))
-- EXECUTION TIME:
0.135861
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
